<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/control"
        android:layout_gravity="center_vertical"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/control_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="test" />

        <LinearLayout
            android:id="@+id/control_panel_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_play"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_stop"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/rate_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_rate_up"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/rate_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_rate_down"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/volume_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_volume_up"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/volume_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_volume_down"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/control_panel_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:textAllCaps="false">

            <Button
                android:id="@+id/mute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_mute"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/un_mute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_un_mute"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/rw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_rw"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/ff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_ff"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/restart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_restart"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/callApp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/control_app_to_app"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>


